Reorder Player prefs menu
+ only show buttons if player has permission